# denso_annotation_pkg

.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: todo.md
anno_msgs/: CMakeLists.txt  package.xml
anno_msgs/msg/: ObjectInfo.msg
anno_srvs/: CMakeLists.txt  package.xml
anno_srvs/srv/: GazeboService.srv  MeshCloudService.srv  RecordService.srv
anno_srvs/srv/record_service/: RecordAcc.srv
annotation_basic/: CMakeLists.txt  package.xml
annotation_client_pkg/: CMakeLists.txt  package.xml
annotation_client_pkg/config/: acc_annotation.yaml  object_detection_2d.yaml  real_acc_annotation.yaml  real_cloud_dataset_get.yaml  semantic_segmentation.yaml
annotation_client_pkg/config/acc/: acc_annotation.yaml  real_acc_annotation.yaml  real_acc_annotation_from_hdf5_acc.yaml  real_acc_annotation_from_hdf5_sensor.yaml
annotation_client_pkg/config/object_detection/: object_detection_2d.yaml  object_detection_full_randomizer.yaml  object_detection_multi_object.yaml
annotation_client_pkg/config/real_data/: real_cloud_dataset_get.yaml
annotation_client_pkg/config/segmentation/: semantic_segmentation.yaml  semantic_segmentation_multi_object_kai_client.yaml
annotation_client_pkg/include/annotation_client_pkg/: annotation_client.hpp  semantic_segmentation_client.hpp
annotation_client_pkg/launch/: acc_annotation.launch  find_mesh_error.launch  object_detection_2d.launch  real_acc_annotation.launch  real_annotation.launch  real_cloud_dataset_get.launch  semantic_segmenataion_client.launch  semantic_segmentataion.launch  semantic_segmentation_randomizer_client.launch
annotation_client_pkg/src/: acc_annotation.cpp  annotation_client.cpp  annotation_client_common.cpp  annotation_client_func.cpp  annotation_client_node.cpp  find_mesh_error.cpp  object_detection_2d.cpp  object_detection_2d_client.cpp  semantic_segmentation_client.cpp  semantic_segmentation_randomizer_client.cpp
annotation_client_pkg/src/acc/: acc_annotation.cpp  real_acc_annotation.cpp  real_acc_annotation_from_hdf5_acc.cpp  real_acc_annotation_from_hdf5_sensor.cpp
annotation_client_pkg/src/object_detection/: object_detection_2d_client.cpp  object_detection_full_randomizer_client.cpp  object_detection_multi_object_client.cpp
annotation_client_pkg/src/real_data/: real_acc_annotation.cpp  real_cloud_annotation.cpp  real_cloud_dataset_get.cpp
annotation_client_pkg/src/segmentation/: semantic_segmentation_client.cpp  semantic_segmentation_multi_object_client.cpp  semantic_segmentation_multi_object_kai_client.cpp  semantic_segmentation_no_b_box.cpp  semantic_segmentation_no_sensor.cpp  semantic_segmentation_randomizer_client.cpp  semantic_segmentation_sensor_bbox.cpp  semantic_visualize_client.cpp
annotation_common/: CMakeLists.txt  package.xml  setup.py
annotation_common/config/: common_parameter.yaml  noize_make_client.yaml
annotation_common/include/annotation_common/: data_change_client.hpp  hdf5_open_data_process.hpp  util_anno.hpp
annotation_common/launch/: annotation_server.launch  noize_make_client.launch
annotation_common/scripts/annotation_common/: hdf5_function.py
annotation_common/src/: hdf5_open_data_process_client_node.cpp  noize_make_client.cpp  util_anno.cpp
annotation_main_pkg/: CMakeLists.txt  package.xml
annotation_server_pkg/: CMakeLists.txt  package.xml
annotation_server_pkg/config/: annotation_server.yaml
annotation_server_pkg/launch/: annotation_server.launch
gazebo_domain_randomization/gazebo_domain_randomizer/launch/: demo.launch  domain_randomizer.launch  new.launch  new_1.launch  try.launch
gazebo_domain_randomization/gazebo_domain_randomizer/nodes/: joint_properties_randomizer.py  light_randomizer.py  link_properties_randomizer.py  link_visual_properties_randomizer.py  physics_properties_randomizer.py  shapes_randomizer.py  sky_randomizer.py  surface_params_randomizer.py
gazebo_model_package/: CMakeLists.txt  package.xml
gazebo_model_package/config/: decide_object_position.yaml  gazebo_tf_publisher.yaml
gazebo_model_package/src/: decide_object_position.cpp  gazebo_model_move.cpp  gazebo_model_server.cpp  gazebo_tf_publisher.cpp  gazebo_tf_publisher_node.cpp
labeling_package/: CMakeLists.txt  package.xml
labeling_package/config/: instance_label_drawer.yaml  record_server.yaml
labeling_package/launch/: record_server.launch
labeling_package/scripts/: record_server.py
labeling_package/src/: instance_label_drawer.cpp  nearest_point_extractor.cpp
mesh_cloud_package/: CMakeLists.txt  package.xml
mesh_cloud_package/config/: mesh_cloud.yaml
mesh_cloud_package/launch/: mesh_cloud.launch
mesh_cloud_package/src/: mesh_cloud.cpp  mesh_sampler.cpp
noize_package/: CMakeLists.txt  package.xml
noize_package/config/: noize_add_on_hdf5_client.yaml  noize_cloud_client.yaml  noize_cloud_try.yaml  noize_image_client.yaml  noize_make_client.yaml
noize_package/include/noize_package/: hdf5_open_data_process.hpp  noize_add_on_hdf5_client.hpp  noize_client.hpp  noize_cloud_make.hpp  noize_cloud_transform.hpp  noize_image_make.hpp
noize_package/include/noize_package/cloud/: noize_cloud_client.hpp  noize_cloud_make.hpp  noize_cloud_transform.hpp
noize_package/include/noize_package/image/: noize_image_client.hpp  noize_image_make.hpp
noize_package/launch/: noize_add_on_hdf5_client.launch  noize_cloud_client.launch  noize_cloud_try.launch  noize_image_client.launch  noize_make_client.launch
noize_package/src/: hdf5_open_data_process_client_node.cpp  noize_add_on_hdf5_client.cpp  noize_add_on_hdf5_client_node.cpp  noize_client.cpp  noize_client_node.cpp  noize_cloud_client.cpp  noize_cloud_make.cpp  noize_cloud_transform.cpp  noize_image_client.cpp  noize_make_client.cpp
noize_package/src/cloud/: noize_cloud_client.cpp  noize_cloud_client_node.cpp  noize_cloud_make.cpp  noize_cloud_transform.cpp  noize_cloud_try.cpp
noize_package/src/image/: noize_image_client.cpp  noize_image_client_node.cpp  noize_image_make.cpp
util_anno/: CMakeLists.txt  package.xml
util_anno/include/util_anno/: util_anno.hpp
util_anno/src/: util_anno.cpp
(+10 files in other folders)
