<?xml version="1.0"?>
<package format="2">
  <name>annotation_client_pkg</name>
  <version>0.0.0</version>
  <description>The annotation_client_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ericlab@todo.todo">ericlab</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>util_package</build_depend>
  <build_depend>gazebo_model_pkg</build_depend>
  <build_depend>tf_package</build_depend>
  <build_depend>space_handling_pkg</build_depend>
  <build_depend>data_transform_pkg</build_depend>
  <build_depend>sensor_package</build_depend>
  <build_depend>noize_package</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
